tests/snapshots/d5__part_1_parsed_example.snap
---
source: tests/d5.rs
expression: example_parse_res
---
Ok(
    AlmanacConfig {
        seeds: [
            Id {
                value: RawId(
                    79,
                ),
                space: Seed,
            },
            Id {
                value: RawId(
                    14,
                ),
                space: Seed,
            },
            Id {
                value: RawId(
                    55,
                ),
                space: Seed,
            },
            Id {
                value: RawId(
                    13,
                ),
                space: Seed,
            },
        ],
        maps: [
            Map {
                from_space: "seed",
                to_space: "soil",
                entries: [
                    MapEntry {
                        start_id_from: RawId(
                            98,
                        ),
                        start_id_to: RawId(
                            50,
                        ),
                        size: 2,
                    },
                    MapEntry {
                        start_id_from: RawId(
                            50,
                        ),
                        start_id_to: RawId(
                            52,
                        ),
                        size: 48,
                    },
                ],
            },
            Map {
                from_space: "soil",
                to_space: "fertilizer",
                entries: [
                    MapEntry {
                        start_id_from: RawId(
                            15,
                        ),
                        start_id_to: RawId(
                            0,
                        ),
                        size: 37,
                    },
                    MapEntry {
                        start_id_from: RawId(
                            52,
                        ),
                        start_id_to: RawId(
                            37,
                        ),
                        size: 2,
                    },
                    MapEntry {
                        start_id_from: RawId(
                            0,
                        ),
                        start_id_to: RawId(
                            39,
                        ),
                        size: 15,
                    },
                ],
            },
            Map {
                from_space: "fertilizer",
                to_space: "water",
                entries: [
                    MapEntry {
                        start_id_from: RawId(
                            53,
                        ),
                        start_id_to: RawId(
                            49,
                        ),
                        size: 8,
                    },
                    MapEntry {
                        start_id_from: RawId(
                            11,
                        ),
                        start_id_to: RawId(
                            0,
                        ),
                        size: 42,
                    },
                    MapEntry {
                        start_id_from: RawId(
                            0,
                        ),
                        start_id_to: RawId(
                            42,
                        ),
                        size: 7,
                    },
                    MapEntry {
                        start_id_from: RawId(
                            7,
                        ),
                        start_id_to: RawId(
                            57,
                        ),
                        size: 4,
                    },
                ],
            },
            Map {
                from_space: "water",
                to_space: "light",
                entries: [
                    MapEntry {
                        start_id_from: RawId(
                            18,
                        ),
                        start_id_to: RawId(
                            88,
                        ),
                        size: 7,
                    },
                    MapEntry {
                        start_id_from: RawId(
                            25,
                        ),
                        start_id_to: RawId(
                            18,
                        ),
                        size: 70,
                    },
                ],
            },
            Map {
                from_space: "light",
                to_space: "temperature",
                entries: [
                    MapEntry {
                        start_id_from: RawId(
                            77,
                        ),
                        start_id_to: RawId(
                            45,
                        ),
                        size: 23,
                    },
                    MapEntry {
                        start_id_from: RawId(
                            45,
                        ),
                        start_id_to: RawId(
                            81,
                        ),
                        size: 19,
                    },
                    MapEntry {
                        start_id_from: RawId(
                            64,
                        ),
                        start_id_to: RawId(
                            68,
                        ),
                        size: 13,
                    },
                ],
            },
            Map {
                from_space: "temperature",
                to_space: "humidity",
                entries: [
                    MapEntry {
                        start_id_from: RawId(
                            69,
                        ),
                        start_id_to: RawId(
                            0,
                        ),
                        size: 1,
                    },
                    MapEntry {
                        start_id_from: RawId(
                            0,
                        ),
                        start_id_to: RawId(
                            1,
                        ),
                        size: 69,
                    },
                ],
            },
            Map {
                from_space: "humidity",
                to_space: "location",
                entries: [
                    MapEntry {
                        start_id_from: RawId(
                            56,
                        ),
                        start_id_to: RawId(
                            60,
                        ),
                        size: 37,
                    },
                    MapEntry {
                        start_id_from: RawId(
                            93,
                        ),
                        start_id_to: RawId(
                            56,
                        ),
                        size: 4,
                    },
                ],
            },
        ],
    },
)
